<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iNCTU</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">設定</string>
    <string name="inctu">iCT行動學習</string>
    <string name="curriculum">課表</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="remember_account">記住我的帳號及密碼</string>
    <string name="forget_password">忘記密碼</string>
    <string name="log_in">登入</string>
    <string name="loging_in">登入中</string>
    <string name="account_and_password_cannot_be_blank">帳號及密碼不得為空</string>
    <string name="wrong_account_and_password">錯誤的帳號及密碼</string>
    <string name="log_in_success">登入成功</string>
    <string name="input_your_account">輸入你的帳號</string>
    <string name="enter">確認</string>
    <string name="cancel">取消</string>
    <string name="student">學生</string>
    <string name="teacher">教師</string>
    <string name="ta">助教</string>
    <string name="announcements">公告</string>
    <string name="latest">最新</string>
    <string name="overdue">過期</string>
    <string name="lecture">課程講義</string>
    <string name="reference">參考資料</string>
    <string name="to_be_submitted">待繳</string>
    <string name="peer_assessment">互評</string>
    <string name="submitted">已繳</string>
    <string name="downloading">下載中</string>
    <string name="name:">名稱：</string>
    <string name="related_unit">相關單元：</string>
    <string name="content">作業簡述：</string>
    <string name="deadline">繳交期限：</string>
    <string name="ways_to_submit">繳交型態：</string>
    <string name="attach_file">作業附檔:</string>
    <string name="observer">旁聽生</string>
    <string name="student2">修課生</string>
    <string name="from">寄件人:</string>
    <string name="to">收件人:</string>
    <string name="copies">副本:</string>
    <string name="otherpeople">其他收件人:</string>
    <string name="subject">郵件標題:</string>
    <string name="problemsummary">問題敘述:</string>
    <string name="send">傳送</string>
    <string name="ict_action_learning">iCT行動學習</string>
    <string name="campus_map">校園地圖</string>
    <string name="contact_us">聯絡我們</string>
    <string name="problem_type">問題類別</string>
    <string name="reply_type">回覆方式:</string>
    <string name="contact_information">聯絡資料:</string>
    <string name="email">電子郵件</string>
    <string name="phone">聯絡電話</string>
    <string name="imagebuttondescription">imagebutton</string>
    <string name="Teacher:">教師：</string>
    <string name="Number:">課號：</string>
    <string name="newest_announcement">最新公告</string>
    <string name="important_announcement">重要公告</string>
    <string name="department:">系所：</string>
    <string name="personal_blog">個人網址/Blog</string>
    <string name="office">辦公室/研究所</string>
    <string name="nickname">我的暱稱</string>
    <string name="self_introduction">自我介紹</string>
    <string name="department">系所</string>
    <string name="name">姓名</string>
    <string name="attach_file:">附件：</string>
    <string name="file_size:">檔案大小：</string>
    <string name="homework_name:">作業名稱：</string>
    <string name="homework_attach_file">作業附件：</string>
    <string name="handed_up_attach_file">已繳附件：</string>
    <string name="there_are_some_fields_havent_been_editted">有資料尚未輸入</string>
    <string name="topics:">主題數：</string>
    <string name="last_post:">最新回覆:</string>
    <string name="add_announcement">新增公告</string>
    <string name="announcement_type:">公告類別:</string>
    <string name="announcement_title:">公告標題:</string>
    <string name="announcement_content:">公告內容:</string>
    <string name="begin_date:">開始日期:</string>
    <string name="end_date:">截止日期:</string>
    <string name="inform_by_email:">郵件通知:</string>
    <string name="finish">完成</string>
    <string name="after_announce">公告後即刻</string>
    <string name="after_announcement_start">公告開始時</string>
    <string name="unsubmitted">未繳</string>
    <string name="in_progress">進行中</string>
    <string name="pending">待批</string>
    <string name="finished">已批</string>
    <string name="notice">預告</string>
    <string name="homework_information">作業資訊</string>
    <string name="homework_description:">作業簡述：</string>
    <string name="student_list">學生名單</string>
    <string name="submit_time:">繳交時間：</string>
    <string name="not_submitted_student">未繳學生</string>
    <string name="submitted_student">已繳學生</string>
    <string name="submitted_files:">已繳交檔案:</string>
    <string name="reply">回覆</string>
    <string name="delete">刪除</string>
    <string name="deleted">已刪除</string>
    <string name="are_you_sure_to_delete">確定要刪除嗎？</string>
    <string name="respondent:">回覆者:</string>
    <string name="discussion_topic:">討論主題:</string>
    <string name="reply_content:">回覆內容:</string>
    <string name="pick_file">選取檔案</string>
    <string name="respective_unit:">所屬單元：</string>
    <string name="respective_forum:">所屬討論區：</string>
    <string name="please_select_respective_unit">請選擇所屬單元</string>
    <string name="please_select_respective_forum">請選擇所屬討論區</string>
    <string name="add_forum_topic">新增討論主題</string>
    <string name="discuss_content:">討論內容</string>
    <string name="back_to_course_menu">回到課程功能選單</string>
    <string name="back_to_course_list">回到當期課程</string>
    <string name="log_out">登出</string>
    <string name="course_menu">課程選單</string>
    <string name="course_list">課程列表</string>
    <string name="submit_status">繳交狀況</string>
    <string name="homework_content">作業內容</string>
    <string name="forum">討論區</string>
    <string name="discussion_topics">討論主題</string>
    <string name="discussion_content">討論內文</string>
    <string name="reply_to_topic">回覆主題</string>
    <string name="member_information">成員資料</string>
    <string name="ict_contact_us">iCT-聯絡我們</string>
    <string name="nctu_digital_content_production_center">交通大學教務處數位內容製作中心</string>
    <string name="customer_service">iCT客服專線：校內分機 陳小姐#31433, 江先生#50167</string>
    <string name="attachment">附件</string>
    <string name="ict_news">iCT-最新消息</string>
    <string name="news_detail">新聞細節</string>
    <string name="my_curriculum">我的課表</string>
    <string name="you_have_no_class_in_this_identity">您在此身份並無課程</string>
    <string name="no_new_announcement">沒有最新公告</string>
    <string name="no_overdue_announcement">沒有過期公告</string>
    <string name="no_references">沒有參考資料</string>
    <string name="no_lectures">沒有課程講義</string>
    <string name="no_unsubmitted_homework">沒有未繳的作業</string>
    <string name="no_peer_assessment_homework">沒有互評的作業</string>
    <string name="no_tosubmit_homework">沒有待繳的作業</string>
    <string name="no_submitted_homework">沒有已繳的作業</string>
    <string name="no_in_progress_homework">沒有進行中的作業</string>
    <string name="no_pending_homework">沒有待批的作業</string>
    <string name="no_finished_homework">沒有已批的作業</string>
    <string name="no_notice_homework">沒有預告的作業</string>
    <string name="this_course_has_no_forum">本課程暫無討論區</string>
    <string name="this_forum_has_no_topic">本討論區暫無討論主題</string>
    <string name="timeout">逾時</string>
    <string name="boai_campus">博愛校區</string>
    <string name="kuang_fu_campus">光復校區</string>
    <string name="add_reply">回覆主題</string>
    <string name="homework">作業</string>
    <string name="homework_hand_up">作業繳交</string>
    <string name="materials">教材</string>
    <string name="member_list">成員列表</string>
    <string name="score">成績</string>
    <string name="send_mail">寄送郵件</string>
    <string name="NCTU_action_learning_platform">國立交通大學行動學習平台</string>
    <string name="from2:">發信人：</string>
    <string name="please_input_e3_account_and_password">*請輸入E3帳號及密碼</string>
    <string name="you_have_no_course_in_this_identity_please_choose_another_identity">你在這個身份並無任何課程，請重新選取身份</string>
    <string name="iCT_only_provide_explorering_homework_You_cant_submit_homework_by_iCT">*iCT作業僅供作業狀態瀏覽，暫無線上繳交及批閱功能</string>
    <string name="other_courses:">其他課程列表：</string>
    <string name="the_class_has_no_observer">本課程沒有旁聽生</string>
    <string name="the_class_has_no_teacher">本課程沒有老師</string>
    <string name="the_class_has_no_student">本課程沒有學生</string>
    <string name="there_is_no_submitted_student">沒有已繳學生</string>
    <string name="there_is_no_unsubmitted_student">沒有未繳學生</string>
    <string name="begin_date_cannot_after_end_date">起始時間不可晚於結束時間</string>
    <string name="there_is_no_application_can_open_this_file">沒有程式可開啟此檔案</string>
    <string name="success:">成功:</string>
    <string name="failures:">失敗:</string>
    <string name="successfully_deleted">成功刪除</string>
    <string name="unsuccessfully_deleted">刪除不成功</string>
    <string name="files">個檔案</string>
    <string name="successfully_added">成功新增</string>
    <string name="unsuccessfully_added">新增不成功</string>
    <string name="network_problem_message">無法連線至伺服器或連線太慢，WIFI連線設定，謝謝。</string>
    <string name="no_need_to_inform">不需通知</string>
    <string name="bus_information">校車資訊</string>
    <string name="title_activity_bus">BusActivity</string>
</resources>
