<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:layout_gravity="top" android:id="@id/titleBackground" android:background="@drawable/curriculum_titlebar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="@*android:style/TextAppearance.Large" android:textColor="@*android:color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/activityTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/my_curriculum" />
        <ProgressBar android:id="@id/progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="25.0dip" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/curriculum_loginbackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <LinearLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
                <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account" />
                <EditText android:id="@id/account" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:inputType="text">
                    <requestFocus />
                </EditText>
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password" />
                <EditText android:id="@id/password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:inputType="textPassword" />
            </LinearLayout>
            <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:textColor="#ffff0000" android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/please_input_e3_account_and_password" />
            <CheckBox android:layout_gravity="right" android:id="@id/remember" android:layout_width="wrap_content" android:layout_height="34.0dip" android:text="@string/remember_account" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <ImageButton android:layout_gravity="left" android:id="@id/login" android:background="@*android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="7.0dip" android:src="@drawable/curriculum_login_button_style" android:contentDescription="@string/imagebuttondescription" />
            <ImageButton android:layout_gravity="right" android:id="@id/offline" android:background="@*android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:src="@drawable/curriculum_offline_button_style" android:contentDescription="@string/imagebuttondescription" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>