<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:layout_gravity="center" android:id="@id/titleBackground" android:background="@drawable/titlebar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="@*android:style/TextAppearance.Large" android:textColor="@*android:color/white" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ict_contact_us" />
        <ProgressBar android:id="@id/progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="25.0dip" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff0000ff" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/nctu_digital_content_production_center" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff0000ff" android:id="@id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/customer_service" />
    <TableLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TableRow android:background="#ffbababa" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
            <TextView android:textColor="#ffff0000" android:gravity="top|right|center" android:layout_gravity="top|right|center" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="*" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:gravity="right|center" android:layout_gravity="center_vertical" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/from2:" />
            <EditText android:layout_gravity="center_vertical" android:id="@id/from" android:layout_width="0.0dip" android:layout_height="wrap_content" android:ems="10" android:layout_weight="1.0" android:inputType="text">
                <requestFocus />
            </EditText>
        </TableRow>
        <TableRow android:background="#ffbababa" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
            <TextView android:textColor="#ffff0000" android:gravity="top|right|center" android:layout_gravity="top|right|center" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="*" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_gravity="center_vertical" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reply_type" />
            <Spinner android:layout_gravity="center_vertical" android:id="@id/replytype" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </TableRow>
        <TableRow android:background="#ffbababa" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
            <TextView android:textColor="#ffff0000" android:gravity="top|right|center" android:layout_gravity="top|right|center" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="*" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_gravity="center_vertical" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contact_information" />
            <EditText android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/replydata" android:layout_width="0.0dip" android:layout_height="wrap_content" android:ems="10" android:layout_weight="1.0" android:inputType="text" />
        </TableRow>
        <TableRow android:background="#ffbababa" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="5.0dip" android:layout_weight="1.0">
            <TextView android:textColor="#ffff0000" android:gravity="top|right|center" android:layout_gravity="top|right|center" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="*" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_gravity="center_vertical" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/problemsummary" />
            <EditText android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/problems" android:layout_width="0.0dip" android:layout_height="fill_parent" android:ems="10" android:layout_weight="1.0" android:inputType="textMultiLine" />
        </TableRow>
    </TableLayout>
    <Button android:id="@id/send" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/send" />
</LinearLayout>