<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:layout_gravity="top" android:id="@id/titleBackground" android:background="@drawable/titlebar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="@*android:style/TextAppearance.Large" android:textColor="@*android:color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/activityTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/send_mail" />
        <ProgressBar android:id="@id/progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="25.0dip" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <TableLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TableRow android:background="#ffbababa" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
            <TextView android:textColor="#ffff0000" android:gravity="top|right|center" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="*" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:gravity="right" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/from" />
            <EditText android:id="@id/from" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="0.0dip" android:layout_height="wrap_content" android:cursorVisible="false" android:ems="10" android:layout_weight="1.0" android:inputType="none">
                <requestFocus />
            </EditText>
        </TableRow>
        <TableRow android:background="#ffbababa" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
            <TextView android:textColor="#ffff0000" android:gravity="top|right|center" android:layout_gravity="top|right|center" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="*" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:gravity="right" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/to" />
            <EditText android:id="@id/to" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="0.0dip" android:layout_height="wrap_content" android:cursorVisible="false" android:ems="10" android:layout_weight="1.0" android:inputType="textEmailAddress" />
        </TableRow>
        <TableRow android:background="#ffbababa" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
            <TextView android:textColor="#ffff0000" android:gravity="top|right|center" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="*" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:gravity="right" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copies" />
            <EditText android:id="@id/copies" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="0.0dip" android:layout_height="wrap_content" android:cursorVisible="false" android:ems="10" android:layout_weight="1.0" android:inputType="textEmailAddress" />
        </TableRow>
        <TableRow android:background="#ffbababa" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
            <TextView android:textColor="#ffff0000" android:gravity="top|right|center" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="*" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="right" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/otherpeople" />
            <EditText android:id="@id/others" android:layout_width="0.0dip" android:layout_height="wrap_content" android:ems="10" android:layout_weight="1.0" android:inputType="textEmailAddress" />
        </TableRow>
        <TableRow android:background="#ffbababa" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
            <TextView android:textColor="#ffff0000" android:gravity="top|right|center" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="*" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:gravity="right" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/subject" />
            <EditText android:id="@id/subject" android:layout_width="0.0dip" android:layout_height="wrap_content" android:ems="10" android:layout_weight="1.0" android:inputType="text" />
        </TableRow>
        <TableRow android:background="#ffbababa" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="5.0dip" android:layout_weight="1.0">
            <TextView android:textColor="#ffff0000" android:gravity="top|right|center" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="*" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:gravity="right" android:id="@id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/problemsummary" />
            <EditText android:gravity="top" android:id="@id/problems" android:layout_width="0.0dip" android:layout_height="fill_parent" android:ems="10" android:layout_weight="1.0" android:inputType="textMultiLine" />
        </TableRow>
    </TableLayout>
    <Button android:id="@id/send" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/send" />
</LinearLayout>