<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:layout_gravity="center" android:id="@id/titleBackground" android:background="@drawable/titlebar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="@*android:style/TextAppearance.Large" android:textColor="@*android:color/white" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/add_reply" />
        <ProgressBar android:id="@id/progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="25.0dip" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/respondent:" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/respondent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
    </LinearLayout>
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/discussion_topic:" />
    <EditText android:id="@id/discussiontopic" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="text">
        <requestFocus />
    </EditText>
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reply_content:" />
    <EditText android:id="@id/content" android:layout_width="fill_parent" android:layout_height="0.0dip" android:ems="10" android:layout_weight="1.0" android:inputType="textMultiLine" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/attach_file:" />
        <LinearLayout android:orientation="vertical" android:id="@id/files" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/pickfile" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pick_file" />
        </LinearLayout>
    </LinearLayout>
    <Button android:id="@id/finish" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/finish" />
</LinearLayout>